app/assets/stylesheets/application.scss
//= require bootstrap.min

$primary_colour: #245682;
$base_text_colour:#00413d;
$error_colour:#c1272d;
$notice_colour:#336600;
$light_grey: #f8f8f8;
$mid_grey: #eee;
$grey: #ccc;
$green:#090;
$red: #ea0001;

@import "compass/css3/transition";
@import "compass/css3/border-radius";
@import "compass/css3/box-shadow";
@import "bootstrap_overrides";
@import "message_box";
@import "posts";
@import "form";
@import "dropzone";
@import "wysiwyg";
@import "font-awesome";

body {
  position:relative;
  font-family: "Andale Mono", AndaleMono, monospace;
  }

.top-bar {
  height: 85px;
  width: 100%;
  background-color: $mid_grey;
  position: absolute;
  top: 0;
  left: 0;
}

img.logo {
  position: relative;
  margin-top: 15px;
  float: left;
}

.outer {
  margin-top: 30px;
}

nav {
  display:inline-block;
  margin-left: 50px;
  margin-top: 10px;
  li {
    display: inline-block;
    margin-left: 40px;
    a {
      color: $primary_colour;
      position:relative;
      font-size: 32px;
      display:block;
      text-align:center;
      div {
        font-size:14px;
      }
      z-index: 10;
      &:hover{
        text-decoration:none;
        color: lightent($primary_colour, 20%);
      }
    }
  }
}

h2 {
  text-align:left;
  text-transform: uppercase;
  font-size: 24px;
  margin:0;
}

footer {
  color:#ccc;
  text-align:center;
  margin-top: 40px;
}

